# multisigs_and_carrots

./: Cargo.toml  README.md
src/: combine_psbts.rs  create_psbt.rs  generate_descriptor.rs  generate_keys.rs  sign_psbt.rs
